syntax = "proto3";

package users;

option go_package = "./users.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

// Get User
message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string email = 2;
}
//

// Update User
message UpdateUserRequest {
  string user_id = 1;
  string email = 2;
  string password = 3;
}

message UpdateUserResponse {
  string user_id = 1;
  string email = 2;
}
//

// Delete User
message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  string message = 1;
}